--- a/stomp/src/main/resources/static/websocket/send-user.html
+++ b/stomp/src/main/resources/static/websocket/send-user.html
@@ -1,4 +1,3 @@
-<%@ page language="java" contentType="text/html; UTF-8" pageEncoding="UTF-8"%>
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -12,9 +11,9 @@
                 <button id="disconnect" disabled="disabled" onclick="disconnect();">断开连接</button>
             </div>
             <div id="conversationDiv">
-                <p>
-                    <label>发送的内容</label>
-                </p>
+                <p><label>发送给用户</label></p>
+                <p><input type="text" id="user"/></p>
+                <p><label>发送的内容</label></p>
                 <p>
                     <textarea id="message" rows="5"></textarea>
                 </p>
@@ -49,7 +48,7 @@
             // 开启socket连接
             function connect() {
                 // 定义请求服务器的端点
-                var socket = new SockJS('/socket');
+                var socket = new SockJS('/wsuser');
                 // stomp客户端
                 stompClient = Stomp.over(socket);
                 // 连接服务器端点
@@ -71,8 +70,10 @@
             // 向request/send服务端发送消息
             function sendMsg() {
                 var value = $('#message').val();
+                var user = $('#user').val();
+                var text = user + ',' + value;
                 // 发送消息到/request/send，其中/request是服务器定义的前缀，/send是@MessageMapping所配置的路径
-                stompClient.send('/request/send', {}, value);
+                stompClient.send('/request/sendUser', {}, text);
             }
         </script>
     </body>
